K8s/clutch-position/Clutch-Position-Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: clutch-position-deployment
  labels:
        app: clutch-position
spec:
  replicas: 1
  selector:
    matchLabels:
      app: clutch-position
  template:
    metadata:
      labels:
        app: clutch-position
    spec:
      containers:
        - name: clutch-position
          image: dragg54/clutch-position:1.0
          ports:
          - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: clutch-position-clusterip-srv
spec:
  selector:
    app: clutch-position
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
