K8s/clutch-position/Clutch-Position-Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: clutch-position-np-srv
spec:
  selector:
    app: clutch-position
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: NodePort
