K8s/clutch-position/Clutch-Position-Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: clutch-pos-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: clutch-position.com
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: clutch-position-clusterip-srv
              port:
                number: 80
